# llllllllammmmmmaaaaaaui

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codegraph.html  docker-compose.sonar.yml  eslint.config.js  index.html  package-lock.json  package.json  sonar-project.properties  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
experiments/hipfire/: bench-hipfire-vs-llama.README.md  bench-hipfire-vs-llama.ps1  hipfire-integration-plan.md  live-verification-checklist.md
scripts/: codegraph-export.mjs  codegraph-inspect.mjs  codegraph-probe.mjs  codegraph-template.html  codegraph-ui-server.mjs  codegraph-ui.html
src/: App.tsx  data.ts  icons.tsx  main.tsx  state.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bench.rs  build_scan.rs  catalog.rs  chats.rs  engines.rs  gguf.rs  hipfire_bench.rs  hipfire_convert.rs  hipfire_diag.rs  hipfire_pull.rs  hw.rs  lib.rs  main.rs  mcp.rs  models_scan.rs  server.rs  settings.rs  transcribe.rs  util.rs  workspace.rs
src/components/: ChatSidebar.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  LogsPanel.tsx  ModelLibraryOverlay.tsx  Recorder.tsx  SessionConfigFields.tsx  TextPromptDialog.tsx  Toasts.tsx  WorkspaceConfigOverlay.tsx
src/components/chat/: ChatDialogs.tsx  ChatMessage.tsx  CodeBlockPre.tsx  Composer.tsx  MessageAudio.tsx  MessageImage.tsx
src/lib/: api.ts  buildArgs.test.ts  buildArgs.ts  buildHipfireArgs.test.ts  buildHipfireArgs.ts  buildMtmdArgs.test.ts  buildMtmdArgs.ts  chatHelpers.test.ts  chatHelpers.ts  chatUi.test.ts  chatUi.ts  interactionTools.test.ts  interactionTools.ts  logger.test.ts  logger.ts  mmproj.test.ts  mmproj.ts  platform.ts  quant.test.ts  quant.ts  series.test.ts  series.ts  splitThink.test.ts  useAudioRecorder.ts  wav.test.ts  wav.ts  workspaceTools.test.ts  workspaceTools.ts
src/screens/: Bench.tsx  BinaryLocator.tsx  Catalog.tsx  Chat.tsx  Configure.tsx  EngineManager.tsx  Hardware.tsx  Mcp.tsx  Models.tsx  Profiles.test.tsx  Profiles.tsx  Transcribe.tsx  screens.smoke.test.tsx
src/state/: effects.tsx  index.ts  persist.ts  store.ts  testUtils.ts  types.ts
src/state/slices/: benchSlice.test.ts  benchSlice.ts  buildSlice.test.ts  buildSlice.ts  catalogSlice.test.ts  catalogSlice.ts  chatSlice.test.ts  chatSlice.ts  engineSlice.test.ts  (+25 more)
src/test/: setup.ts
