[package]
name = "llllllllammmmmmaaaaaaui"
version = "0.4.2"
description = "llllllllammmmmmaaaaaaui — pilot your own llama.cpp"
authors = ["narawit <narawittriprom@gmail.com>"]
license = "MIT"
repository = "https://github.com/Crssz/llllllllammmmmmaaaaaaui"
edition = "2021"

[lib]
name = "llllllllammmmmmaaaaaaui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
nvml-wrapper = { version = "0.10", optional = true }
log = "0.4"
env_logger = "0.11"
libloading = "0.9"
ureq = { version = "2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.14"

[features]
default = ["nvml"]
nvml = ["dep:nvml-wrapper"]
