[package]
name = "llllllllammmmmmaaaaaaui"
version = "0.4.2"
description = "llllllllammmmmmaaaaaaui — pilot your own llama.cpp"
authors = ["narawit <narawittriprom@gmail.com>"]
license = "MIT"
repository = "https://github.com/Crssz/llllllllammmmmmaaaaaaui"
edition = "2021"

[lib]
name = "llllllllammmmmmaaaaaaui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
nvml-wrapper = { version = "0.12", optional = true }
log = "0.4"
env_logger = "0.11"
libloading = "0.8"
ureq = { version = "2", features = ["json"] }
# Extract downloaded llama.cpp release archives. Windows release zips use plain
# deflate, so we trim the default feature set (bzip2/zstd/lzma/aes) to keep the
# build light.
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.14"

[target.'cfg(windows)'.dev-dependencies]
# Used only by hw.rs tests to force an STA apartment and prove the WMI/MTA
# apartment behaviour the GPU-util sampler depends on. Pinned to the version
# wmi already resolves so no extra crate is compiled.
windows = { version = "0.62", features = ["Win32_System_Com"] }

[features]
default = ["nvml"]
nvml = ["dep:nvml-wrapper"]
